package com.diguage.didp.mediator;

/**
 * ConcreteColleague1 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-16
 */
public class ConcreteColleague1 {
}
