package com.diguage.didp.mediator;

/**
 * Mediator 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-16
 */
public class Mediator {
}
